Prefer file: to jar:file: URLs in launcher
See gh-16248